--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MSG to PDF Converter"
-        Height="350"
+        Height="370"
         Width="525">
     <Grid>
         <StackPanel Margin="10">
@@ -20,7 +20,9 @@
                     Margin="0,0,0,10"/>
             <ListBox x:Name="FilesListBox"
                      Height="150"
-                     Margin="0,0,0,10"/>
+                     Margin="0,0,0,10"
+                     SelectionMode="Extended"
+                     KeyDown="FilesListBox_KeyDown"/>
             <ProgressBar x:Name="ProgressBar"
                          Height="20"
                          Margin="0,0,0,10"
