--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,36 +4,47 @@
         Title="MSG to PDF Converter"
         Height="370"
         Width="525">
-    <Grid>
-        <StackPanel Margin="10">
-            <TextBlock FontSize="16"
-                       FontWeight="Bold"
-                       Text="Select .msg Files to Convert to PDF"
-                       Margin="0,0,0,10"/>
-            <Button x:Name="SelectFilesButton"
-                    Content="Select .msg Files"
-                    Click="SelectFilesButton_Click"
-                    Margin="0,0,0,10"/>
-            <Button x:Name="SelectFolderButton"
-                    Content="Select Folder"
-                    Click="SelectFolderButton_Click"
-                    Margin="0,0,0,10"/>
-            <ListBox x:Name="FilesListBox"
-                     Height="150"
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <TextBlock FontSize="16"
+                   FontWeight="Bold"
+                   Text="Select .msg Files to Convert to PDF"
+                   Margin="0,0,0,10"
+                   Grid.Row="0"/>
+        <Button x:Name="SelectFilesButton"
+                Content="Select .msg Files"
+                Click="SelectFilesButton_Click"
+                Margin="0,0,0,10"
+                Grid.Row="1"/>
+        <Button x:Name="SelectFolderButton"
+                Content="Select Folder"
+                Click="SelectFolderButton_Click"
+                Margin="0,0,0,10"
+                Grid.Row="2"/>
+        <ListBox x:Name="FilesListBox"
+                 Margin="0,0,0,10"
+                 SelectionMode="Extended"
+                 KeyDown="FilesListBox_KeyDown"
+                 Grid.Row="3"/>
+        <ProgressBar x:Name="ProgressBar"
+                     Height="20"
                      Margin="0,0,0,10"
-                     SelectionMode="Extended"
-                     KeyDown="FilesListBox_KeyDown"/>
-            <ProgressBar x:Name="ProgressBar"
-                         Height="20"
-                         Margin="0,0,0,10"
-                         Minimum="0"
-                         Maximum="100"
-                         Value="0"
-                         Visibility="Collapsed"/>
-            <Button x:Name="ConvertButton"
-                    Content="Convert to PDF"
-                    Click="ConvertButton_Click"
-                    IsEnabled="False"/>
-        </StackPanel>
+                     Minimum="0"
+                     Maximum="100"
+                     Value="0"
+                     Visibility="Collapsed"
+                     Grid.Row="4"/>
+        <Button x:Name="ConvertButton"
+                Content="Convert to PDF"
+                Click="ConvertButton_Click"
+                IsEnabled="False"
+                Grid.Row="5"/>
     </Grid>
 </Window>
