--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,14 +17,22 @@
                 </Grid.RowDefinitions>
                 <TextBlock FontSize="16"
                            FontWeight="Bold"
-                           Text="Select .msg Files or Folders to Convert to PDF"
+                                Text="Select .msg Files or Folders to Convert to PDF"
                            Margin="0,0,0,10"
                            Grid.Row="0"/>
-                <Button x:Name="SelectFilesButton"
-                        Content="Add .msg Files or Folders"
-                        Click="SelectFilesButton_Click"
-                        Margin="0,0,0,10"
-                        Grid.Row="1"/>
+                <StackPanel Orientation="Horizontal"
+                                Grid.Row="1"
+                                Margin="0,0,0,10">
+                        <Button x:Name="SelectFilesButton"
+                                Content="Add .msg Files or Folders"
+                                Click="SelectFilesButton_Click"
+                                Width="200"
+                                Margin="0,0,10,0"/>
+                        <Button x:Name="ClearListButton"
+                                Content="Clear List"
+                                Click="ClearListButton_Click"
+                                Width="80"/>
+                </StackPanel>
                 <TextBlock x:Name="FileCountLabel"
                            Text="Files selected: 0"
                            FontStyle="Italic"
