--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,6 +14,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <TextBlock FontSize="16"
                            FontWeight="Bold"
@@ -104,7 +105,7 @@
                            Foreground="Blue"
                            Margin="0,0,0,10"
                            Visibility="Collapsed"
-                                Grid.Row="7"/>
+                           Grid.Row="7"/>
                 <ProgressBar x:Name="ProgressBar"
                              Height="20"
                              Margin="0,0,0,10"
@@ -112,6 +113,6 @@
                              Maximum="100"
                              Value="0"
                              Visibility="Collapsed"
-                             Grid.Row="7"/>
+                             Grid.Row="8"/>
         </Grid>
 </Window>
