Add option to delete .msg files after conversion and ensure robust file unlock/disposal

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -85,8 +85,12 @@
                           Content="Extract original email only (remove replies/forwards)"
                           Margin="0,0,0,10"
                           Grid.Row="5"/>
+                <CheckBox x:Name="DeleteMsgAfterConversionCheckBox"
+                          Content="Delete .msg after conversion"
+                          Margin="0,0,0,10"
+                          Grid.Row="6"/>
                 <StackPanel Orientation="Horizontal"
-                            Grid.Row="6"
+                            Grid.Row="7"
                             Margin="0,0,0,10">
                         <Button x:Name="SelectOutputFolderButton"
                                 Content="Select Output Folder"
@@ -103,7 +107,7 @@
                                    VerticalAlignment="Center"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal"
-                            Grid.Row="7"
+                            Grid.Row="8"
                             Margin="0,0,0,10">
                         <Button x:Name="ConvertButton"
                                 Content="Convert to PDF"
@@ -123,7 +127,7 @@
                            Foreground="Blue"
                            Margin="0,0,0,10"
                            Visibility="Collapsed"
-                           Grid.Row="8"/>
+                           Grid.Row="9"/>
                 <ProgressBar x:Name="ProgressBar"
                              Height="20"
                              Margin="0,0,0,10"
@@ -131,6 +135,6 @@
                              Maximum="100"
                              Value="0"
                              Visibility="Collapsed"
-                             Grid.Row="9"/>
+                             Grid.Row="10"/>
         </Grid>
 </Window>
