--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -133,15 +133,17 @@
                              Value="0"
                              Visibility="Collapsed"
                              Grid.Row="10"/>
-                <CheckBox x:Name="AlwaysOnTopCheckBox"
-                          Content="Always on top"
-                          VerticalAlignment="Bottom"
-                          HorizontalAlignment="Right"
-                          Margin="5"
-                          FontSize="11"
-                          Opacity="0.7"
-                          ToolTip="Keep this window above others"
-                          Checked="AlwaysOnTopCheckBox_Checked"
-                          Unchecked="AlwaysOnTopCheckBox_Unchecked"/>
+                <Button x:Name="PinButton"
+                        Content="📌"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        Margin="5"
+                        FontSize="16"
+                        Opacity="0.7"
+                        ToolTip="Keep this window above others"
+                        Click="PinButton_Click"
+                        Foreground="Black"
+                        Background="Transparent"
+                        BorderThickness="0"/>
         </Grid>
 </Window>
